tests/vertical-slice/reject/rc_new_cyclic_undefined.hew
fn main() {
    let _ = Rc::new_cyclic(1);
}
